--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.31.0",
     "react-scripts": "4.0.3",
+    "tiny-slider-react": "^0.5.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/tiny-slider-react": "^0.3.3"
   }
 }
