--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.24.0",
     "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
+    "formik": "^2.2.9",
+    "humps": "^2.0.1",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.31.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "tiny-slider-react": "^0.5.3",
     "typescript": "^4.1.2",
@@ -48,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/humps": "^2.0.1",
     "@types/tiny-slider-react": "^0.3.3"
   }
 }
