--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.31.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "tiny-slider-react": "^0.5.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@types/humps": "^2.0.1",
     "@types/tiny-slider-react": "^0.3.3"
   }
