--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-query": "^3.31.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
