--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -19,6 +20,7 @@
     "formik": "^2.2.9",
     "humps": "^2.0.1",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
@@ -29,7 +31,8 @@
     "tiny-slider-react": "^0.5.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "lodash.debounce": "^4.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,6 +62,7 @@
   "devDependencies": {
     "@reduxjs/toolkit": "^1.7.1",
     "@types/humps": "^2.0.1",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/tiny-slider-react": "^0.3.3"
   }
 }
